--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-safe-area-context": "^4.2.5",
     "react-native-screens": "^3.13.1",
     "react-native-svg": "12.3.0",
+    "react-native-swipe-gestures": "^1.0.5",
     "react-native-web": "0.17.7"
   },
   "devDependencies": {
